alignment fix for the light and dark mode button

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,7 @@
 body {
   color: rgb(var(--foreground-rgb));
 }
+
+span.alignment-fix {
+  margin-top: -6px;
+}
